--- a/packages/aigotools/package.json
+++ b/packages/aigotools/package.json
@@ -12,12 +12,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:migrate:dev:env": "dotenv -e .env.local npx prisma migrate dev"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.588.0",
     "@clerk/nextjs": "^5.1.3",
     "@nextui-org/react": "^2.4.1",
+    "@prisma/client": "^5.15.1",
     "@tanstack/query-core": "^5.44.0",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-query-devtools": "^5.40.1",
@@ -64,6 +66,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-unused-imports": "^3.2.0",
     "postcss": "^8.4.38",
+    "prisma": "^5.15.1",
     "sass": "~1.69.7",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
