feat: turso+sqlite+upstash redis

--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -23,6 +23,8 @@
     "@bull-board/api": "^5.20.1",
     "@bull-board/express": "^5.20.1",
     "@bull-board/nestjs": "^5.20.1",
+    "@knaadh/nestjs-drizzle-turso": "^1.0.1",
+    "@libsql/client": "^0.7.0",
     "@nestjs/bull": "^10.1.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
@@ -34,6 +36,7 @@
     "bull": "^4.12.2",
     "cheerio": "1.0.0-rc.12",
     "cos-nodejs-sdk-v5": "^2.14.1",
+    "drizzle-orm": "^0.31.2",
     "generic-pool": "^3.9.0",
     "ioredis": "^5.4.1",
     "lodash": "^4.17.21",
