--- a/packages/aigotools/package.json
+++ b/packages/aigotools/package.json
@@ -12,11 +12,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "drizzle-generate": "drizzle-kit generate",
+    "drizzle-migrate": "drizzle-kit migrate",
+    "drizzle-push": "drizzle-kit push",
+    "drizzle-studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.588.0",
     "@clerk/nextjs": "^5.1.3",
+    "@libsql/client": "^0.7.0",
     "@nextui-org/react": "^2.4.1",
     "@tanstack/query-core": "^5.44.0",
     "@tanstack/react-query": "^5.40.1",
@@ -30,6 +35,8 @@
     "cos-js-sdk-v5": "^1.8.0",
     "cos-nodejs-sdk-v5": "^2.14.1",
     "dayjs": "~1.11.11",
+    "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.31.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.378.0",
     "minio": "^8.0.0",
@@ -53,6 +60,7 @@
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "autoprefixer": "^10.4.19",
+    "drizzle-kit": "^0.22.8",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.1",
     "eslint-config-prettier": "^8.10.0",
