--- a/packages/aigotools/.env
+++ b/packages/aigotools/.env
@@ -1,5 +1,5 @@
 NEXT_PUBLIC_APP_URL=http://127.0.0.1:3000
-NEXT_PUBLIC_APP_NAME=AigoTools
+NEXT_PUBLIC_APP_NAME=OrgAi.net
 # clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxx
 CLERK_SECRET_KEY=sk_test_xxx
