--- a/packages/crawler/package.json
+++ b/packages/crawler/package.json
@@ -31,7 +31,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/platform-express": "^10.3.9",
+    "@nestjs/schedule": "^4.1.0",
     "@nestjs/throttler": "^5.1.2",
+    "@upstash/redis": "^1.33.0",
     "axios": "^1.7.0",
     "bull": "^4.12.2",
     "cheerio": "1.0.0-rc.12",
