--- a/packages/aigotools/.env
+++ b/packages/aigotools/.env
@@ -1,38 +1,25 @@
-NEXT_PUBLIC_APP_URL=http://127.0.0.1:3000
+NEXT_PUBLIC_APP_URL=http://orgai.net
 NEXT_PUBLIC_APP_NAME=OrgAi.net
 # clerk
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_xxx
-CLERK_SECRET_KEY=sk_test_xxx
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_c3VubnktYm94ZXItMjkuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_QtM5KIOtaBOmjqLtwjHh8f2YMQmCexIrLRdUqJOims
 CLERK_DEBUG=true
-NEXT_PUBLIC_MANAGER_USER=user_xxx
-# mongo
-MONGODB_URI=mongodb://root:aigotools123456@aigotools-mongo:27017/aigotools?authSource=admin
+NEXT_PUBLIC_MANAGER_USER=user_2iGax4zBVL2jLhEcxvmS8lL7vkd
+# turso
+TURSO_DATABASE_URL=
+TURSO_AUTH_TOKEN=
 # storage: s3、minio、cos
-NEXT_PUBLIC_IMAGE_STORAGE=minio
-# minio
-MINIO_BASE=http://127.0.0.1:9000
-MINIO_BUCKET=aigotools
-MINIO_ENDPOINT=aigotools-minio
-MINIO_PORT=9000
-MINIO_SSL=false
-MINIO_ACCESS_KEY=
-MINIO_SECERT_KEY=
+NEXT_PUBLIC_IMAGE_STORAGE=s3
 # aws s3
-S3_BASE=https://image.aigotools.com
-S3_REGION=ap-southeast-1
-S3_BUCKET=
+S3_BASE=https://pub-92eb2212af25444fa26ae4c55d674d97.r2.dev
+S3_REGION=auto
+S3_BUCKET=orgai
 S3_ACCESS_KEY_ID=
 S3_ACCESS_SECERT=
-# tencent cos
-COS_BASE=https://image.aigotools.com
-COS_BUCKET=aigotools
-COS_REGION=
-COS_ACCESS_KEY=
-COS_SECERT_KEY=
+S3_ENDPOINT=https://pub-92eb2212af25444fa26ae4c55d674d97.r2.dev
 # seo
-NEXT_PUBLIC_APP_GENERATOR=someu
-NEXT_PUBLIC_APP_GENERATOR_URL=https://github.com/someu
+NEXT_PUBLIC_APP_GENERATOR=
+NEXT_PUBLIC_APP_GENERATOR_URL=
 # gateway
-CRAWLER_GATEWAY=http://crawler:13000
-CRAWLER_AUTH_USER=root
-CRAWLER_AUTH_PASSWORD=aigotools123456
+CRAWLER_GATEWAY=https://orgai.a513409514.workers.dev/
+CRAWLER_API_KEY=
