--- a/packages/aigotools/.env
+++ b/packages/aigotools/.env
@@ -21,5 +21,5 @@ S3_ENDPOINT=https://pub-92eb2212af25444fa26ae4c55d674d97.r2.dev
 NEXT_PUBLIC_APP_GENERATOR=
 NEXT_PUBLIC_APP_GENERATOR_URL=
 # gateway
-CRAWLER_GATEWAY=https://orgai.a513409514.workers.dev/
+CRAWLER_GATEWAY=https://orgai.a513409514.workers.dev
 CRAWLER_API_KEY=
